# Kpop-News-Aggregation-Platform

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  drop_text_indexes.py  example.py  pyproject.toml  requirements.txt
.github/workflows/: backend-deploy.yml  frontend-deploy.yml
app/: app.py  article_search.py  entity_aliases.py  main.py
app/adapters/: beanie_repository.py  mongo_raw_article_repo.py  mongo_repositories.py  mongo_unit_of_work.py
app/data_layer/: mongo_database.py  schemas.py
app/entity_enrichment/: __init__.py  models.py  resolver.py  scoring.py  wiki_client.py
app/interfaces/: __init__.py  news_aggregator.py  nlp_module.py  pipeline_requests.py  query_params.py  raw_article_repository.py  repositories.py  repository.py  unit_of_work.py
app/models/: articles.py  artists.py  events.py  feed.py  groups.py  sources.py
app/news_aggregators/: news_api.py
app/pipeline/: generators.py  pipeline.py
app/pipeline/llm_modules/: config.py  modules.py  signatures.py
app/test/: conftest.py
app/workflows/: article_workflow.py
deploy/nginx/: nginx.conf
docs/: aws-deployment.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
scripts/: smoke_llm.py
tests/: conftest.py  cors_test.html  test_article_search_helpers.py  test_entity_aliases.py  test_news_api_adapter.py  test_nlp_cheap_mode.py  test_pydantic.py  test_repositories.py  test_schemas.py  test_wiki_entity_resolver.py
